--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,16 @@
-The awesomest HN clone!!!
+DBC Week 7 project.
+======================
+
+Hacker News clone.
+
+Made by: Ivan Stroganov and Brian Parks
+
+
+Highlights of what we learned in this project:
+
+
+Manually create users, limit functionality to authenticated users only.
+
+Manage sessions with cookies.
+
+Allow users to vote up links. Only links submitted by other users. Only once per user per link.
